# agent-platform

./: .dockerignore  .editorconfig  .env.example  .env.prod.example  .gitattributes  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  .trivyignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Makefile  README.md  ROADMAP.md  SECURITY.md  buf.gen.yaml  buf.yaml
ci/: pipeline.yml
services/knowledge-python/: .dockerignore  Dockerfile  README.md  alembic.ini  pyproject.toml
services/knowledge-python/app/: __init__.py  main.py
services/knowledge-python/app/api/: health.py
services/knowledge-python/app/api/v1/: documents.py  search.py
services/knowledge-python/app/core/: __init__.py  config.py  exceptions.py
services/knowledge-python/app/indexers/: vector_indexer.py
services/knowledge-python/app/processors/: document_processor.py
services/knowledge-python/app/retrievers/: __init__.py  embedding_cache.py  hybrid_retriever.py  query_rewriter.py  reranker.py  tiered_reranker.py
services/knowledge-python/migrations/: env.py
services/knowledge-python/migrations/versions/: 0001_initial_schema.py
services/knowledge-python/tests/: __init__.py
services/knowledge-python/tests/integration/: __init__.py  test_knowledge_flow.py
services/knowledge-python/tests/unit/: __init__.py  test_documents_api.py  test_knowledge.py  test_search_api.py
services/model-gateway-python/: Dockerfile  README.md  pyproject.toml
services/model-gateway-python/app/: __init__.py  main.py
services/model-gateway-python/app/api/v1/: chat.py  embeddings.py  models.py
services/model-gateway-python/app/core/: config.py  content_filter.py  exceptions.py  logging.py  rate_limiter.py  redis_client.py  response_cache.py
services/model-gateway-python/app/metrics/: __init__.py  cost_calculator.py  prometheus_metrics.py  token_counter.py
services/model-gateway-python/app/providers/: base.py  deepseek.py  glm.py  qwen.py
services/model-gateway-python/app/resilience/: circuit_breaker.py
services/model-gateway-python/app/router/: __init__.py  model_router.py  policy_store.py
services/model-gateway-python/tests/: __init__.py  conftest.py
services/model-gateway-python/tests/integration/: __init__.py  test_gateway_flow.py
services/model-gateway-python/tests/unit/: __init__.py  test_chat_api.py  test_circuit_breaker.py  test_content_filter.py  test_content_filter_dynamic.py  test_health.py  test_model_router.py  test_multi_provider_failover.py  test_qwen_provider.py  test_rate_limiter.py
services/orchestrator-python/: Dockerfile  README.md  alembic.ini  pyproject.toml  pytest.ini
services/orchestrator-python/app/: __init__.py  main.py
services/orchestrator-python/app/api/: deps.py  utils.py
services/orchestrator-python/app/api/middleware/: __init__.py  error_handler.py  otel_middleware.py  rate_limit_middleware.py  request_context.py  shutdown.py  tracing_middleware.py
services/orchestrator-python/app/api/v1/: __init__.py  agent.py  chat.py  health.py  session.py
services/orchestrator-python/app/core/: __init__.py  cache.py  config.py  constants.py  context_manager.py  exceptions.py  feature_flags.py  health_checker.py  logging.py  metrics.py  output_guard.py  prompt_guard.py  quota_manager.py  resilience.py  sensitive_filter.py  shutdown.py  singleton.py  step_buffer.py  token_counter.py  tracing.py
services/orchestrator-python/app/graph/: builder.py  checkpointer.py  state.py
services/orchestrator-python/app/grpc/: __init__.py  server.py
services/orchestrator-python/app/infrastructure/: __init__.py  database.py  grpc_client.py  redis_client.py
services/orchestrator-python/app/memory/: __init__.py  checkpoint_store.py  kafka_callback.py  long_term_memory.py  memory_manager.py  session_store.py  summary_generator.py
services/orchestrator-python/app/prompts/: __init__.py  loader.py
services/orchestrator-python/app/saga/: __init__.py  compensations.py  state.py
services/orchestrator-python/app/schemas/: __init__.py  agent.py  chat.py  session.py
services/orchestrator-python/app/services/: __init__.py
services/orchestrator-python/app/tools/: __init__.py  base.py  mock_registry.py  registry.py
services/orchestrator-python/migrations/: env.py
services/orchestrator-python/migrations/versions/: 0001_agent_memory.py
services/orchestrator-python/scripts/: verify_production_ready.py
services/orchestrator-python/tests/: __init__.py  conftest.py
services/orchestrator-python/tests/integration/: __init__.py  test_chat_flow.py  test_memory_integration.py
services/orchestrator-python/tests/unit/: __init__.py  test_approval_wait_node.py  test_auth_interceptor.py  test_cache.py  test_context_manager.py  test_exceptions.py  test_feature_flags.py  test_final_answer_node.py  test_health.py  test_health_checker.py  test_infrastructure.py  test_long_term_memory.py  test_metrics.py  test_model_gateway_client.py  test_output_guard.py  test_prompt_guard.py  test_quota_manager.py  test_rag_retrieve_node.py  test_resilience.py  test_risk_check_node.py  test_sensitive_filter.py  test_session_store.py  test_state.py  test_step_buffer.py  test_thinking_node.py  test_tool_call_node.py
(+672 files in other folders)
