[project]
name = "knowledge-python"
version = "1.0.0"
description = "Agent Platform Knowledge Service (RAG)"
requires-python = ">=3.12"

dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.2.0",
    "httpx>=0.27.0",
    "asyncpg>=0.29.0",
    "redis>=5.0.0",
    "structlog>=24.1.0",
    "pypdf>=4.0.0",
    "python-docx>=1.1.0",
    "langchain-text-splitters>=0.0.2",
    "sentence-transformers>=2.6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.4.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
